--- a/sass/layout/_company.scss
+++ b/sass/layout/_company.scss
@@ -2,7 +2,7 @@
   margin-bottom: 50px;
   font-family: Roboto;
   font-size: 28px;
-  line-height: 1.17px;
+  line-height: 1.17;
   font-style: normal;
   font-weight: 700;
   letter-spacing: 0.03em;
@@ -10,7 +10,7 @@
   color: rgba(33, 33, 33, 1);
   @media screen and (min-width: 1200px) {
     font-size: 36px;
-    line-height: 1.16px;
+    line-height: 1.16;
   }
 }
 
@@ -25,10 +25,12 @@
   }
 }
 .company__logo-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  box-sizing: border-box;
+  @media screen and (min-width: 450px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    box-sizing: border-box;
+  }
   @media screen and (min-width: 1200px) {
     flex-wrap: nowrap;
   }
