--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -139,7 +139,7 @@ p {
 }
 
 .online-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   background-color: transparent;
@@ -158,6 +158,7 @@ p {
   }
   @media screen and (min-width: 768px) {
     display: flex;
+    width: 358px;
   }
   @media screen and (min-width: 1200px) {
     display: inline-block;
