--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -152,11 +152,14 @@
   z-index: 5;
   padding-top: 21px;
   padding-bottom: 48px;
-  .conteiner {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+}
+.conteiner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  margin-left: 30px;
+  @media screen and (min-width: 450px) {
     margin-left: 40px;
   }
 }
@@ -193,11 +196,14 @@
 .mob-menu-contacts__tel {
   display: block;
   font-weight: 500;
-  font-size: 34px;
+  font-size: 30px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: #2196f3;
   margin-bottom: 32px;
+  @media screen and (min-width: 450px) {
+    font-size: 32px;
+  }
 }
 .mob-menu-contacts__mail {
   font-weight: 500;
@@ -215,16 +221,24 @@
 
 .mob-social-list__link {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 13px;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #2196f3;
   margin-bottom: 0;
+  @media screen and (min-width: 450px) {
+    font-size: 18px;
+  }
 }
 .mob-social-list__item:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 5px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
-  padding-right: 10px;
+  padding-right: 5px;
+  @media screen and (min-width: 450px) {
+    margin-right: 10px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+  }
 }
 .open-menu__icons {
   &:focus,
