--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -13,7 +13,7 @@
 }
 
 .modal {
-  width: 450px;
+  width: 100%;
   max-height: 609px;
   background-color: #ffffff;
   border-radius: 4px;
@@ -22,7 +22,13 @@
   left: 50%;
   transition: transform 500ms;
   transform: scale(1) rotate(0) translate(-50%, -50%);
+  @media screen and (min-width: 480px) {
+    max-width: none;
+    width: 450px;
+    min-height: 609px;
+  }
   @media screen and (min-width: 1200px) {
+    max-width: none;
     width: 528px;
     min-height: 581px;
   }
