--- a/sass/layout/_portfolio-content.scss
+++ b/sass/layout/_portfolio-content.scss
@@ -12,8 +12,10 @@
   }
 }
 
+.content-line__text {
+  height: 100vh;
+}
 .content-line__list {
-  margin-top: 0;
   margin-bottom: 30px;
   border: 1px solid rgba(238, 238, 238, 1);
   offset: 0px, 1px;
@@ -59,9 +61,11 @@
   font-size: 18px;
   line-height: 1.5;
   padding: 63px 24px;
+  margin-top: 0;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms;
 }
+
