--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -256,3 +256,9 @@
     fill: #2196f3;
   }
 }
+.small-picture {
+  max-width: 290px;
+  @media screen and (min-width: 450px) {
+    max-width: none;
+  }
+}
