--- a/sass/layout/_portfolio-content.scss
+++ b/sass/layout/_portfolio-content.scss
@@ -6,14 +6,18 @@
 }
 .content-line {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   &:nth-child(9) {
     margin-bottom: 0;
+  }
+  @media screen and (min-width: 480px) {
+    justify-content: space-between;
   }
 }
 
 .content-line__text {
   height: 100vh;
+  text-align: start;
 }
 .content-line__list {
   margin-bottom: 30px;
@@ -60,12 +64,21 @@
   top: 0;
   font-size: 18px;
   line-height: 1.5;
-  padding: 63px 24px;
+  padding: 24px 24px;
   margin-top: 0;
   color: #ffffff;
   background-color: rgba(33, 150, 243, 0.9);
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms;
-}
+  @media screen and (min-width: 480px) {
+    padding: 77px 24px;
+  }
 
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
+}
