адаптация модалки под 320px

--- a/css/main.css
+++ b/css/main.css
@@ -1470,15 +1470,19 @@ h1 {
 }
 
 .modal-check-text {
-  box-sizing: border-box;
   font-size: 12px;
   line-height: 1.7;
   color: #757575;
   letter-spacing: 0.03em;
-  display: flex;
   align-items: center;
   padding: 0;
   margin-left: -15px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-check-text {
+    display: flex;
+  }
 }
 
 @media screen and (min-width: 1200px) {
