--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -130,15 +130,18 @@
 }
 
 .modal-check-text {
-  box-sizing: border-box;
+  // box-sizing: border-box;
   font-size: 12px;
   line-height: 1.7;
   color: #757575;
   letter-spacing: 0.03em;
-  display: flex;
+
   align-items: center;
   padding: 0;
   margin-left: -15px;
+  @media screen and (min-width: 480px) {
+    display: flex;
+  }
   @media screen and (min-width: 1200px) {
     margin-left: 0;
     font-size: 14px;
