--- a/css/main.css
+++ b/css/main.css
@@ -756,17 +756,16 @@ h1 {
   }
 }
 
-.advantage__list {
+.advantage__list:not(:last-child) {
   margin-bottom: 30px;
 }
 
 @media screen and (min-width: 768px) {
   .advantage__list {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
   }
-  .advantage__list:nth-child(2n + 2) {
-    margin-right: 0;
+  .advantage__list:nth-child(1n + 3) {
+    margin-bottom: 0;
   }
 }
 
@@ -900,7 +899,7 @@ h1 {
 
 .section-employee h2 {
   font-size: 28px;
-  line-height: 1.17px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-collor);
@@ -910,7 +909,7 @@ h1 {
 @media screen and (min-width: 1200px) {
   .section-employee h2 {
     font-size: 36px;
-    line-height: 1.16px;
+    line-height: 1.16;
     margin-bottom: 50px;
   }
 }
@@ -952,6 +951,27 @@ h1 {
   border-radius: 3px;
   offset: 0px, 1px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 480px) {
+  .section-employee__list:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 780px) {
+  .section-employee__list {
+    margin-bottom: 30px;
+  }
+  .section-employee__list:nth-child(1n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-employee__list {
+    margin-bottom: 0;
+  }
 }
 
 .employee {
@@ -1088,9 +1108,20 @@ h1 {
   justify-content: center;
 }
 
+.company__logo-item:nth-child(1n + 5) {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 780px) {
+  .company__logo-item:nth-child(1n + 4) {
+    margin-bottom: 0;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .company__logo-item {
     width: 170px;
+    margin-bottom: 0;
     flex-wrap: nowrap;
   }
   .company__logo-item:not(:last-child) {
@@ -1124,7 +1155,11 @@ h1 {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 768px) {
+.buttons-line__list:nth-child(1n + 4) {
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 1200px) {
   .buttons-line__list {
     margin-bottom: 0;
   }
@@ -1182,7 +1217,11 @@ h1 {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 768px) {
+.buttons-line__list:nth-child(1n + 4) {
+  margin-bottom: 0px;
+}
+
+@media screen and (min-width: 1200px) {
   .buttons-line__list {
     margin-bottom: 0;
   }
@@ -1247,19 +1286,23 @@ h1 {
 }
 
 .content-line__list {
-  margin-bottom: 30px;
-  border: 1px solid #eeeeee;
   offset: 0px, 1px;
   transition: background-color 250ms linear, color 250ms linear, box-shadow 250ms linear;
   position: relative;
 }
 
-.content-line__list :last-child {
-  margin-bottom: 0;
+.content-line__list:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .content-line__list.content-line__list:focus, .content-line__list.content-line__list:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+
+@media screen and (min-width: 480px) {
+  .content-line__list:nth-child(1n + 7) {
+    margin-bottom: 0;
+  }
 }
 
 .section-portfolio h3 {
@@ -1527,6 +1570,9 @@ h1 {
 }
 
 .modal-submit-button {
+  height: 40px;
+  width: 150px;
+  margin-top: -20px;
   height: 50px;
   width: 200px;
   border: none;
@@ -1541,5 +1587,13 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .modal-submit-button {
+    height: 50px;
+    width: 200px;
+    margin-bottom: 20;
+  }
 }
 /*# sourceMappingURL=main.css.map */
