--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -25,14 +25,14 @@
   }
 }
 .advantage__list {
-  margin-bottom: 30px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 768px) {
     width: calc(100% / 2 - 30px);
-    margin-right: 30px;
-
-    &:nth-child(2n + 2) {
-      margin-right: 0;
+    &:nth-child(1n + 3) {
+      margin-bottom: 0;
     }
     @media screen and (min-width: 1200px) {
       margin-left: 0;
