--- a/sass/layout/_company.scss
+++ b/sass/layout/_company.scss
@@ -69,8 +69,17 @@
   justify-content: space-between;
   align-items: center;
   justify-content: center;
+  &:nth-child(1n + 5) {
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 780px) {
+    &:nth-child(1n + 4) {
+      margin-bottom: 0;
+    }
+  }
   @media screen and (min-width: 1200px) {
     width: 170px;
+    margin-bottom: 0;
     flex-wrap: nowrap;
     &:not(:last-child) {
       margin-right: 30px;
