--- a/sass/layout/_employee.scss
+++ b/sass/layout/_employee.scss
@@ -11,14 +11,14 @@
 
   h2 {
     font-size: 28px;
-    line-height: 1.17px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-collor);
     margin-bottom: 30px;
     @media screen and (min-width: 1200px) {
       font-size: 36px;
-      line-height: 1.16px;
+      line-height: 1.16;
       margin-bottom: 50px;
     }
   }
@@ -57,6 +57,20 @@
   offset: 0px, 1px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  @media screen and (min-width: 480px) {
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 780px) {
+    margin-bottom: 30px;
+    &:nth-child(1n + 3) {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 }
 
 .employee {
