--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -179,6 +179,9 @@
   margin-left: 3px;
 }
 .modal-submit-button {
+  height: 40px;
+  width: 150px;
+  margin-top: -20px;
   height: 50px;
   width: 200px;
   border: none;
@@ -194,4 +197,9 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    height: 50px;
+    width: 200px;
+    margin-bottom: 20;
+  }
 }
