--- a/sass/layout/_portfolio-btn.scss
+++ b/sass/layout/_portfolio-btn.scss
@@ -14,7 +14,10 @@
   &:nth-child(2n + 1) {
     margin-bottom: 10px;
   }
-  @media screen and (min-width: 768px) {
+  &:nth-child(1n + 4) {
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 1200px) {
     margin-bottom: 0;
   }
 }
