--- a/sass/layout/_portfolio-content.scss
+++ b/sass/layout/_portfolio-content.scss
@@ -20,19 +20,22 @@
   text-align: start;
 }
 .content-line__list {
-  margin-bottom: 30px;
-  border: 1px solid rgba(238, 238, 238, 1);
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
   offset: 0px, 1px;
   transition: background-color 250ms linear, color 250ms linear,
     box-shadow 250ms linear;
   position: relative;
-  & :last-child {
-    margin-bottom: 0;
-  }
   &.content-line__list:focus,
   &.content-line__list:hover {
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
       0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  }
+  @media screen and (min-width: 480px) {
+    &:nth-child(1n + 7) {
+      margin-bottom: 0;
+    }
   }
 }
 
