--- a/sass/layout/_section-line.scss
+++ b/sass/layout/_section-line.scss
@@ -34,9 +34,9 @@
 }
 
 .section-line__text {
+  display: flex;
   width: 370px;
   height: 70px;
-  padding-top: 27px;
   color: #ffffff;
   left: 0;
   bottom: 0;
@@ -46,6 +46,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.17;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(47, 48, 58, 0.8);
 }
